css/styles.css
/* ... */
[data-theme="dark"] {
    --background-color: #242924;
    --primary-text-color: #FFFFFF;
    --secondary-text-color: #000;
    --menu-selector-color: #2BA948;
    --link-color: #005b54;
    --highlight-bg-color: #000;
    --highlight-text-color: #000;
    --border-code-color: #4e4e4e;
    --background-code-color: #101214;
    --header-underline: #4e4e4e;
    --footer-background: #1f221f;
    --footer-text-color: #FFFFFF;
    --darkmode-icon: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 512 512' fill='%23ffffff' %3E%3Cpath d='M374.031,241.75c-6.671-54.43-49.629-97.28-104.076-103.813c-4.688-0.535-9.402-0.803-14.121-0.804 c-48.118,0.074-91.444,29.154-109.742,73.657c-18.298,44.503-7.957,95.649,26.193,129.548c18.16,17.391,28.56,41.357,28.857,66.5 v13.733h109.714v-13.804c0.083-24.667,10.118-48.256,27.831-65.424c26.754-25.813,39.84-62.686,35.343-99.589V241.75z'/%3E%3Cpath d='M256,512c11.62-0.013,21.975-7.335,25.862-18.286h-51.723C234.025,504.665,244.38,511.987,256,512z'/%3E%3Cpath d='M210.286,466.286c0.007,5.047,4.096,9.136,9.143,9.143h73.143c5.047-0.007,9.136-4.096,9.143-9.143v-27.429h-91.429 V466.286z'/%3E%3Cpath d='M256,82.286c10.099,0,18.286-8.187,18.286-18.286V18.286C274.286,8.187,266.099,0,256,0s-18.286,8.187-18.286,18.286V64 C237.714,74.099,245.901,82.286,256,82.286z'/%3E%3Cpath d='M101.679,127.54c7.236,6.911,18.626,6.911,25.862,0c3.43-3.429,5.357-8.081,5.357-12.931 c0-4.85-1.927-9.502-5.357-12.931L95.214,69.357C91.786,65.927,87.135,64,82.286,64s-9.5,1.927-12.929,5.357 C65.927,72.785,64,77.436,64,82.286s1.927,9.5,5.357,12.929L101.679,127.54z'/%3E%3Cpath d='M82.286,256c0-10.099-8.187-18.286-18.286-18.286H18.286C8.191,237.724,0.01,245.905,0,256 c0.01,10.095,8.191,18.276,18.286,18.286H64C74.099,274.286,82.286,266.099,82.286,256z'/%3E%3Cpath d='M119.356,379.699c-6.32-1.689-13.06,0.126-17.677,4.761l-32.321,32.326c-3.43,3.428-5.357,8.079-5.357,12.929 s1.927,9.5,5.357,12.929c7.234,6.911,18.623,6.911,25.857,0l32.326-32.321c4.634-4.617,6.45-11.357,4.761-17.677 S125.676,381.388,119.356,379.699z'/%3E%3Cpath d='M410.321,384.46c-4.617-4.634-11.357-6.45-17.677-4.761s-11.256,6.625-12.945,12.945s0.126,13.06,4.761,17.677 l32.326,32.321c7.234,6.911,18.623,6.911,25.857,0c3.43-3.428,5.357-8.079,5.357-12.929s-1.927-9.5-5.357-12.929L410.321,384.46z '/%3E%3Cpath d='M493.714,237.714H448c-10.099,0-18.286,8.187-18.286,18.286s8.187,18.286,18.286,18.286h45.714 c10.099,0,18.286-8.187,18.286-18.286S503.813,237.714,493.714,237.714z'/%3E%3Cpath d='M410.321,127.54l32.321-32.326c4.619-4.619,6.423-11.351,4.732-17.661c-1.691-6.31-6.619-11.238-12.929-12.929 c-6.31-1.691-13.042,0.113-17.661,4.732l-32.326,32.321c-3.43,3.429-5.357,8.081-5.357,12.931c0,4.85,1.927,9.502,5.357,12.931 C391.695,134.451,403.086,134.451,410.321,127.54z'/%3E%3C/svg%3E");
    --header-shape: url("data:image/svg+xml,%3Csvg id='wave' style='transform:rotate(180deg); transition: 0.3s' viewBox='0 0 1440 190' version='1.1' xmlns='http://www.w3.org/2000/svg'%3E%3Cdefs%3E%3ClinearGradient id='sw-gradient-0' x1='0' x2='0' y1='1' y2='0'%3E%3Cstop stop-color='rgba(78, 78, 78, .3)' offset='0%25'%3E%3C/stop%3E%3Cstop stop-color='rgba(78, 78, 78, .5)' offset='100%25'%3E%3C/stop%3E%3C/linearGradient%3E%3C/defs%3E%3Cpath style='transform:translate(0, 0px); opacity:1' fill='url(%23sw-gradient-0)' d='M0,57L240,63.3C480,70,960,82,1440,72.8C1920,63,2400,32,2880,22.2C3360,13,3840,25,4320,38C4800,51,5280,63,5760,72.8C6240,82,6720,89,7200,85.5C7680,82,8160,70,8640,82.3C9120,95,9600,133,10080,133C10560,133,11040,95,11520,91.8C12000,89,12480,120,12960,117.2C13440,114,13920,76,14400,69.7C14880,63,15360,89,15840,101.3C16320,114,16800,114,17280,117.2C17760,120,18240,127,18720,133C19200,139,19680,146,20160,145.7C20640,146,21120,139,21600,114C22080,89,22560,44,23040,44.3C23520,44,24000,89,24480,98.2C24960,108,25440,82,25920,69.7C26400,57,26880,57,27360,57C27840,57,28320,57,28800,47.5C29280,38,29760,19,30240,28.5C30720,38,31200,76,31680,98.2C32160,120,32640,127,33120,136.2C33600,146,34080,158,34320,164.7L34560,171L34560,190L34320,190C34080,190,33600,190,33120,190C32640,190,32160,190,31680,190C31200,190,30720,190,30240,190C29760,190,29280,190,28800,190C28320,190,27840,190,27360,190C26880,190,26400,190,25920,190C25440,190,24960,190,24480,190C24000,190,23520,190,23040,190C22560,190,22080,190,21600,190C21120,190,20640,190,20160,190C19680,190,19200,190,18720,190C18240,190,17760,190,17280,190C16800,190,16320,190,15840,190C15360,190,14880,190,14400,190C13920,190,13440,190,12960,190C12480,190,12000,190,11520,190C11040,190,10560,190,10080,190C9600,190,9120,190,8640,190C8160,190,7680,190,7200,190C6720,190,6240,190,5760,190C5280,190,4800,190,4320,190C3840,190,3360,190,2880,190C2400,190,1920,190,1440,190C960,190,480,190,240,190L0,190Z'%3E%3C/path%3E%3C/svg%3E");
}

* {
    border: 0 none;
    margin: 0;
    padding: 0;
}

.hidden { display: none !important; }
.sr-only {
    position: absolute;
    width: 1px;
    height: 1px;
    padding: 0;
    overflow: hidden;
    clip: rect(0, 0, 0, 0);
    white-space: nowrap;
    border: 0;
}

.sr-only:focus {
  background-color: #eee;
  clip: auto !important;
  clip-path: none;
  color: #444;
  display: block;
  font-size: 1em;
  height: auto;
  left: 5px;
  line-height: normal;
  padding: 15px 23px 14px;
  text-decoration: none;
  top: 5px;
  width: auto;
  z-index: 100000; 
}

.slide {
    overflow-y: hidden !important;
    -webkit-transition: height .5s ease-in !important;
            transition: height .5s ease-in !important;
}

/*** BASIC LAYOUT ***/

html, body { height: 100%; }

body { 
    display: flex;
    flex-direction: column;
    color: var(--primary-text-color);
    background-color: var(--background-color);
}

#main { flex: 1 0 auto; }
#header, #footer { flex: 0 0 auto; }

#main {
    padding: 5em 0 4em;
}

.container {
    max-width: 58em;
    padding: 0 0.5em;
    margin: 0 auto;
}
.widescreen .container { max-width: 72em; }
/* ... */

